fix css on safari

--- a/wp-content/themes/thienthanhtea/frontend_src/src/scss/modules/_buttons.scss
+++ b/wp-content/themes/thienthanhtea/frontend_src/src/scss/modules/_buttons.scss
@@ -1,4 +1,5 @@
 .btn {
+  -webkit-appearance: none
   display: inline-block;
   vertical-align: middle;
   padding: 12px 12px;
