--- a/wp-content/themes/thienthanhtea/frontend_src/src/scss/modules/_input.scss
+++ b/wp-content/themes/thienthanhtea/frontend_src/src/scss/modules/_input.scss
@@ -1,4 +1,6 @@
 %form-control {
+  -webkit-appearance: none;
+  -moz-appearance: none;
   appearance: none;
   background-color: $light-color;
   border: 0;
